@@ -338,12 +338,21 @@
 		<aligny>center</aligny>
 		<include>Animation_HiddenByInfo</include>
 	</include>
+	<include name="Global_NextAired">
+		<width>1920</width>
+		<height>30</height>
+		<font>METF_Heading</font>
+		<textcolor>GlobalHeading</textcolor>
+		<align>center</align>
+		<aligny>center</aligny>
+		<include>Animation_HiddenByInfo</include>
+	</include>
 	<include name="Global_HeadingDetailVars">
 		<posx>1220</posx>
 		<width>450</width>
 		<height>30</height>
 		<font>METF_Heading</font>
-		<textcolor>GlobalHeadingDetails</textcolor>
+		<textcolor>GlobalHeading</textcolor>
 		<align>right</align>
 		<aligny>center</aligny>
 		<include>Animation_HiddenByInfo</include>
@@ -481,34 +490,20 @@
 	<!-- Next Aired Date -->
 	<include name="NextAiredInfo">
 		<control type="group">
-			<posx>300</posx>
-			<posy>620</posy>
+			<include>Global_NextAired</include>
+			<posx>0</posx>
+			<posy>-7</posy>
 			<include>Window_OpenClose_Animation</include>
-			<!--<include>ContentFade</include>
-			<animation effect="slide" start="0,0" end="0,-590" condition="Control.IsVisible(50) | Control.IsVisible(590)">Conditional</animation>
-			<animation effect="slide" start="0,0" end="0,-480" condition="Control.IsVisible(55)">Conditional</animation>
-			<animation effect="slide" start="0,0" end="0,-510" condition="Control.IsVisible(57)">Conditional</animation>
-			<animation effect="slide" start="0,0" end="385,-165" condition="Control.IsVisible(596)">Conditional</animation>
-			<animation effect="slide" start="0,0" end="-200,90" condition="Control.IsVisible(50) + Skin.HasSetting(FanartLong)">Conditional</animation>
-			<animation effect="fade" start="100" end="0" time="150" condition="Control.IsVisible(55) + Control.IsVisible(7031)">Conditional</animation>
-			<include condition="Skin.HasSetting(HateTransparency)">T-Underlay56</include> -->
-			<visible>Container.Content(TVShows) | Container.Content(Seasons) | [Container.Content(Episodes)</visible>
-			<control type="image">
-				<posx>0</posx>
-				<posy>0</posy>
-				<width>680</width>
-				<height>100</height>
-				<texture diffuse="underlay-diffuse.png" border="0,10,0,10">underlay5.png</texture>
-			</control>
+			<visible>!IsEmpty(Window(Home).Property(NextAired.Label)) + [Container.Content(TVShows) | Container.Content(Seasons) | [Container.Content(Episodes)]] + !IsEmpty(ListItem.TVShowTitle) + !IsEmpty(Window(Home).Property(NextAired.NextDate))</visible>
 			<control type="label">
 				<posx>0</posx>
-				<posy>18</posy>
-				<width>680</width>
+				<posy>0</posy>
+				<width>1280</width>
 				<height>60</height>
 				<align>center</align>
 				<aligny>center</aligny>
 				<font>font-20</font>
-				<label>[COLOR=blue]$LOCALIZE[31179][/COLOR][CR]$INFO[Window(Home).Property(NextAired.NextTitle)][CR]$INFO[Window(Home).Property(NextAired.AirTime)] - $INFO[Window(Home).Property(NextAired.NextDate)]</label>
+				<label>[COLOR=GlobalHeading]$LOCALIZE[31427]:[/COLOR] $INFO[Window(Home).Property(NextAired.NextTitle)][CR]$INFO[Window(Home).Property(NextAired.AirTime)] - $INFO[Window(Home).Property(NextAired.NextDate)]</label>
 			</control>
 		</control>
 	</include>
