@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <addon 
 	id="skin.metropolis" 
-	version="0.9.80" 
+	version="0.9.81" 
 	name="Metropolis" 
 	provider-name="Amra">
   <requires>
