@@ -312,4 +312,6 @@
 	<string id="31423">Author</string>
 	<string id="31424">Poster &amp; Fanart</string> 
 	<string id="31425">Use Thumbnail in Video OSD</string>
+	<string id="31426">Enable Next Aired Date Display</string>
+	<string id="31427">Next Episode</string>
 </strings>
